# links-bookmark

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: errors.rs  lib.rs  main.rs
src/cli/: app.rs
src/cli/commands/: add.rs  delete.rs  list.rs  mod.rs  search.rs
src/models/: bookmark.rs  mod.rs
src/storage/: mod.rs
