[package]
name = "links-bookmark"
version = "0.1.0"
edition = "2024"
authors = ["ewgsta"]
description = "A CLI tool for managing and organizing links."
license = "GPL-3.0"

[[bin]]
name = "links"
path = "src/main.rs"

[dependencies]
clap = "4"
rusqlite = { version = "0.35", features = ["bundled"] }
chrono = "0.4"
dirs = "6"
